prevajalniki/naloga12/prev20/src/prev/phase/synan/PrevParser.java
// Generated from synan/PrevParser.g4 by ANTLR 4.8


	package prev.phase.synan;
	
	import java.util.*;
	
	import prev.common.report.*;
	import prev.phase.lexan.*;
	import prev.phase.lexan.LexAn.*;

	import prev.data.ast.tree.*;
	import prev.data.ast.tree.decl.*;
	import prev.data.ast.tree.expr.*;
	import prev.data.ast.tree.stmt.*;
	import prev.data.ast.tree.type.*;
	import prev.data.ast.attribute.*;
	import prev.data.ast.visitor.*;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PrevParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VOID=1, BOOLEAN=2, KEYWORD_BOOL=3, KEYWORD_CHAR=4, KEYWORD_DEL=5, KEYWORD_DO=6, 
		KEYWORD_ELSE=7, KEYWORD_FUN=8, KEYWORD_IF=9, KEYWORD_INT=10, KEYWORD_NEW=11, 
		KEYWORD_THEN=12, KEYWORD_TYP=13, KEYWORD_VAR=14, KEYWORD_VOID=15, KEYWORD_WHERE=16, 
		KEYWORD_WHILE=17, INTEGER=18, CHAR=19, STRING=20, POINTER=21, SYMBOL_LBR=22, 
		SYMBOL_RBR=23, SYMBOL_LCBR=24, SYMBOL_RCBR=25, SYMBOL_LSBR=26, SYMBOL_RSBR=27, 
		SYMBOL_DOT=28, SYMBOL_COMMA=29, SYMBOL_COLON=30, SYMBOL_SEMIC=31, SYMBOL_AND=32, 
		SYMBOL_OR=33, SYMBOL_EXCL=34, SYMBOL_EQ=35, SYMBOL_NEQ=36, SYMBOL_LT=37, 
		SYMBOL_GT=38, SYMBOL_LEQ=39, SYMBOL_GEQ=40, SYMBOL_STAR=41, SYMBOL_SLASH=42, 
		SYMBOL_MOD=43, SYMBOL_PLUS=44, SYMBOL_MIN=45, SYMBOL_PWR=46, SYMBOL_EQUALS=47, 
		IDENTIFIER=48, COMMENT=49, WHITESPACE=50, ERROR=51;
	public static final int
		RULE_source = 0, RULE_decl = 1, RULE_typeDeclaration = 2, RULE_variableDeclaration = 3, 
		RULE_functionDeclaration = 4, RULE_funcArgRepeat = 5, RULE_type = 6, RULE_atomicType = 7, 
		RULE_namedType = 8, RULE_pointerType = 9, RULE_recordType = 10, RULE_recTypeRepeat = 11, 
		RULE_enclosedType = 12, RULE_relOps = 13, RULE_addOps = 14, RULE_mulOps = 15, 
		RULE_prefOps = 16, RULE_expr = 17, RULE_disjunctionExpression = 18, RULE_conjunctionExpression = 19, 
		RULE_relationalExpression = 20, RULE_additiveExpression = 21, RULE_multiplicativeExpression = 22, 
		RULE_prefixExpression = 23, RULE_postfixExpression = 24, RULE_atomicExpression = 25, 
		RULE_constantExpression = 26, RULE_variableAccess = 27, RULE_functionCall = 28, 
		RULE_compoundExpression = 29, RULE_enclosedExpression = 30, RULE_typecastExpression = 31, 
		RULE_stmt = 32, RULE_expressionStatement = 33, RULE_assignmentStatement = 34, 
		RULE_conditionalStatement = 35, RULE_loopStatement = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"source", "decl", "typeDeclaration", "variableDeclaration", "functionDeclaration", 
			"funcArgRepeat", "type", "atomicType", "namedType", "pointerType", "recordType", 
			"recTypeRepeat", "enclosedType", "relOps", "addOps", "mulOps", "prefOps", 
			"expr", "disjunctionExpression", "conjunctionExpression", "relationalExpression", 
			"additiveExpression", "multiplicativeExpression", "prefixExpression", 
			"postfixExpression", "atomicExpression", "constantExpression", "variableAccess", 
			"functionCall", "compoundExpression", "enclosedExpression", "typecastExpression", 
			"stmt", "expressionStatement", "assignmentStatement", "conditionalStatement", 
			"loopStatement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'none'", null, "'boolean'", "'char'", "'del'", "'do'", "'else'", 
			"'fun'", "'if'", "'integer'", "'new'", "'then'", "'typ'", "'var'", "'void'", 
			"'where'", "'while'", null, null, null, "'nil'", "'('", "')'", "'{'", 
			"'}'", "'['", "']'", "'.'", "','", "':'", "';'", "'&'", "'|'", "'!'", 
			"'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'*'", "'/'", "'%'", "'+'", 
			"'-'", "'^'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "VOID", "BOOLEAN", "KEYWORD_BOOL", "KEYWORD_CHAR", "KEYWORD_DEL", 
			"KEYWORD_DO", "KEYWORD_ELSE", "KEYWORD_FUN", "KEYWORD_IF", "KEYWORD_INT", 
			"KEYWORD_NEW", "KEYWORD_THEN", "KEYWORD_TYP", "KEYWORD_VAR", "KEYWORD_VOID", 
			"KEYWORD_WHERE", "KEYWORD_WHILE", "INTEGER", "CHAR", "STRING", "POINTER", 
			"SYMBOL_LBR", "SYMBOL_RBR", "SYMBOL_LCBR", "SYMBOL_RCBR", "SYMBOL_LSBR", 
			"SYMBOL_RSBR", "SYMBOL_DOT", "SYMBOL_COMMA", "SYMBOL_COLON", "SYMBOL_SEMIC", 
			"SYMBOL_AND", "SYMBOL_OR", "SYMBOL_EXCL", "SYMBOL_EQ", "SYMBOL_NEQ", 
			"SYMBOL_LT", "SYMBOL_GT", "SYMBOL_LEQ", "SYMBOL_GEQ", "SYMBOL_STAR", 
			"SYMBOL_SLASH", "SYMBOL_MOD", "SYMBOL_PLUS", "SYMBOL_MIN", "SYMBOL_PWR", 
			"SYMBOL_EQUALS", "IDENTIFIER", "COMMENT", "WHITESPACE", "ERROR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PrevParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PrevParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SourceContext extends ParserRuleContext {
		public AstTrees<AstDecl> ast;
		public Vector<AstDecl> decls;
		public DeclContext decl;
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_source);
		((SourceContext)_localctx).decls =  new Vector<AstDecl>();
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(74);
				((SourceContext)_localctx).decl = decl();

						_localctx.decls.add(((SourceContext)_localctx).decl.ast);
					
				}
				}
				setState(79); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KEYWORD_FUN) | (1L << KEYWORD_TYP) | (1L << KEYWORD_VAR))) != 0) );
			}
			_ctx.stop = _input.LT(-1);
			((SourceContext)_localctx).ast =  new AstTrees<AstDecl>(_localctx.decls);
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public AstDecl ast;
		public TypeDeclarationContext typeDeclaration;
		public VariableDeclarationContext variableDeclaration;
		public FunctionDeclarationContext functionDeclaration;
		public TypeDeclarationContext typeDeclaration() {
			return getRuleContext(TypeDeclarationContext.class,0);
		}
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		try {
			setState(90);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KEYWORD_TYP:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				((DeclContext)_localctx).typeDeclaration = typeDeclaration();
				((DeclContext)_localctx).ast =  ((DeclContext)_localctx).typeDeclaration.ast; 
				}
				break;
			case KEYWORD_VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				((DeclContext)_localctx).variableDeclaration = variableDeclaration();
				((DeclContext)_localctx).ast =  ((DeclContext)_localctx).variableDeclaration.ast; 
				}
				break;
			case KEYWORD_FUN:
				enterOuterAlt(_localctx, 3);
				{
				setState(87);
				((DeclContext)_localctx).functionDeclaration = functionDeclaration();
				((DeclContext)_localctx).ast =  ((DeclContext)_localctx).functionDeclaration.ast; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDeclarationContext extends ParserRuleContext {
		public AstTypeDecl ast;
		public Token KEYWORD_TYP;
		public Token IDENTIFIER;
		public TypeContext type;
		public TerminalNode KEYWORD_TYP() { return getToken(PrevParser.KEYWORD_TYP, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PrevParser.IDENTIFIER, 0); }
		public TerminalNode SYMBOL_EQUALS() { return getToken(PrevParser.SYMBOL_EQUALS, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TypeDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDeclaration; }
	}

	public final TypeDeclarationContext typeDeclaration() throws RecognitionException {
		TypeDeclarationContext _localctx = new TypeDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_typeDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			((TypeDeclarationContext)_localctx).KEYWORD_TYP = match(KEYWORD_TYP);
			setState(93);
			((TypeDeclarationContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			setState(94);
			match(SYMBOL_EQUALS);
			setState(95);
			((TypeDeclarationContext)_localctx).type = type();

					((TypeDeclarationContext)_localctx).ast =  new AstTypeDecl(new Location((PrevToken)((TypeDeclarationContext)_localctx).KEYWORD_TYP, ((TypeDeclarationContext)_localctx).type.ast), ((TypeDeclarationContext)_localctx).IDENTIFIER.getText(), ((TypeDeclarationContext)_localctx).type.ast);
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationContext extends ParserRuleContext {
		public AstVarDecl ast;
		public Token KEYWORD_VAR;
		public Token IDENTIFIER;
		public TypeContext type;
		public TerminalNode KEYWORD_VAR() { return getToken(PrevParser.KEYWORD_VAR, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PrevParser.IDENTIFIER, 0); }
		public TerminalNode SYMBOL_COLON() { return getToken(PrevParser.SYMBOL_COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variableDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			((VariableDeclarationContext)_localctx).KEYWORD_VAR = match(KEYWORD_VAR);
			setState(99);
			((VariableDeclarationContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			setState(100);
			match(SYMBOL_COLON);
			setState(101);
			((VariableDeclarationContext)_localctx).type = type();

					((VariableDeclarationContext)_localctx).ast =  new AstVarDecl(new Location((PrevToken)((VariableDeclarationContext)_localctx).KEYWORD_VAR, ((VariableDeclarationContext)_localctx).type.ast), ((VariableDeclarationContext)_localctx).IDENTIFIER.getText(), ((VariableDeclarationContext)_localctx).type.ast);
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclarationContext extends ParserRuleContext {
		public AstFunDecl ast;
		public Token KEYWORD_FUN;
		public Token IDENTIFIER;
		public FuncArgRepeatContext funcArgRepeat;
		public TypeContext type;
		public ExprContext expr;
		public TerminalNode KEYWORD_FUN() { return getToken(PrevParser.KEYWORD_FUN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PrevParser.IDENTIFIER, 0); }
		public TerminalNode SYMBOL_LBR() { return getToken(PrevParser.SYMBOL_LBR, 0); }
		public FuncArgRepeatContext funcArgRepeat() {
			return getRuleContext(FuncArgRepeatContext.class,0);
		}
		public TerminalNode SYMBOL_RBR() { return getToken(PrevParser.SYMBOL_RBR, 0); }
		public TerminalNode SYMBOL_COLON() { return getToken(PrevParser.SYMBOL_COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode SYMBOL_EQUALS() { return getToken(PrevParser.SYMBOL_EQUALS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			((FunctionDeclarationContext)_localctx).KEYWORD_FUN = match(KEYWORD_FUN);
			setState(105);
			((FunctionDeclarationContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			setState(106);
			match(SYMBOL_LBR);
			setState(107);
			((FunctionDeclarationContext)_localctx).funcArgRepeat = funcArgRepeat();
			setState(108);
			match(SYMBOL_RBR);
			setState(109);
			match(SYMBOL_COLON);
			setState(110);
			((FunctionDeclarationContext)_localctx).type = type();
			setState(111);
			match(SYMBOL_EQUALS);
			setState(112);
			((FunctionDeclarationContext)_localctx).expr = expr(0);
